profile-popover: Fix extra padding in user-profile popovers.
In this commit we remove the extra padding appearing around the
user profile images. This can be only reproduced when opening
user profile from buddy list.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -95,3 +95,11 @@ ul.actions_popover i {
 .message-info-popover .popover-title {
     padding: 0;
 }
+
+.user_popover {
+    padding: 0;
+}
+
+.user_popover .popover-title {
+    padding: 0;
+}
